chore(refactor): fix deck creation and card architecture